--- a/plugins/com.test.plugin.calendarPlugin/plugin.xml
+++ b/plugins/com.test.plugin.calendarPlugin/plugin.xml
@@ -9,12 +9,13 @@
     <keywords>phonegap,calendar</keywords>
 
 
-    <js-module src="www/calendar.js" name="calendarPlugin">
-        <clobbers target="window.calendarPlugin" />
-    </js-module>
-
+    <!--<js-module src="www/calendar.js" name="calendarPlugin">-->
+        <!--<clobbers target="window.calendarPlugin" />-->
+    <!--</js-module>-->
+    <asset src="www/calendar.js" target="calendar.js" />
     <!-- android -->
     <platform name="android">
+        <source-file src="src/com/test/plugin/calendarPlugin.java" target-dir="src/com/test/plugin" />
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="calendarPlugin">
                 <param name="android-package" value="com.test.plugin.calendarPlugin"/>
@@ -26,6 +27,5 @@
 			<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 			<uses-permission android:name="android.permission.VIBRATE"/>
 		</config-file>
-        <source-file src="src/com/test/plugin/calendarPlugin.java" target-dir="src/com/test/plugin" />      
-     </platform>          
+     </platform>
 </plugin>
