--- a/plugins/com.test.plugin.calendarPlugin/plugin.xml
+++ b/plugins/com.test.plugin.calendarPlugin/plugin.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-           id="com.test.plugin.calendarPlugin"
-      version="0.1.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+            id="com.test.plugin.calendarPlugin"
+            version="1.0.0">
     <name>calendarPlugin</name>
     <description>Sample calendarPlugin</description>
     <license>MIT</license>
